2005-03-21  Stipe Tolj  <stolj@wapme.de> 
    * gwlib/octstr.{ch]: adding octstr_str_case_compare() to allow insensitive
      string compare with const char. Patch by Fred <fred@5thfinger.com>.
      [Msg-Id: <020f01c51acf$98f1c0e0$0401a8c0@FRED4>]
      
2005-03-21  Stipe Tolj  <stolj@wapme.de> 
    * gwlib/http.c: fixing server and client thread state variables in order to 
      make modules usable in other code where http_init() and http_shutdown()
      is called several times. Thanks to Paul for pointing to this.
      [Msg-Id: <F808656A265C82458A21CCA505A2B12E3E3B87@MACKEN.anam.com>]

2005-03-17  Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: applied patch that implements relaxed source_addr
      checks in SMPP and adds additionally error reporting why kannel rejected
      this MO.
      [Msg-Id: <d0s6c4$1mf$1@sea.gmane.org>]

2005-03-15  Stipe Tolj  <stolj@wapme.de> 
    * configure[.in]: moved required libxml2 version check from 2.2.5 to
      2.2.7, since we use the macro LIBXML_DOTTED_VERSION in gw/shared.c and 
      this is available since 2.2.7. 

2005-03-09  Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c, gw/smscconn.c: fixed memleaks in handling of
      splitted messages.

2005-03-08  Stipe Tolj  <stolj@wapme.de> 
    * wap/wtp_resp.h: adding patch from Igor to support larger objects
      via WTP SAR segments. Thanks to Igor for providing the patch and
      production environment tests and Mindaugas Riauba <mind@bi.lt> for
      picking this item up again for discussion.
      [Msg-ID: <8BCBF9DB739F034B87FE7C7D30EAE55C01A0F34B@hqex2k.francoudi.com>]

2005-03-07  Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: (Client Part) fixed race condition while destroing
      Connection. In order to not trigger RC we must first explicit
      unregister connection from FDSet (because this operation is locked)
      and then destroy Connection.